hphp/hack/test/typecheck/case_type/recursive/non_termination_bug_inter1.php.exp
ERROR: File "non_termination_bug_inter1.php", line 9, characters 13-29:
Invalid `is` expression hint (Typing[4195])
  File "non_termination_bug_inter1.php", line 9, characters 20-28:
  The `is` operator cannot be used with a `newtype`
